# lunabot-2026

./: .gitignore  README.md  ros2_startup.sh  setup.sh  slam_config.yaml
.devcontainer/: Dockerfile
LiDAR/: Dockerfile  README.md
esp32_controller/src/: main.cpp
esp_32/: esp_32.ino
launch/: .testlaunch.py.swp  testlaunch.py
lunabot_bringup/: package.xml  setup.py
lunabot_bringup/launch/: launch.py
lunabot_bringup/lunabot_bringup/: cloud_to_scan.py
src/drivetrain/: CMakeLists.txt  canable_start.sh  package.xml
src/drivetrain/include/: constants.h
src/drivetrain/src/: drivetrain_node.cpp
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/srv/: SetTeleop.srv
src/shovel/: package.xml  setup.cfg  setup.py
src/shovel/shovel/: arduino_client.py  constants.py  shovel_node.py  shovel_node_elegoo.py
src/teleop/: CMakeLists.txt  package.xml
src/teleop/include/: constants.h  joybuttons.h
src/teleop/src/: keyboard_node.cpp  teleop_node.cpp
src/teleop/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/utils/: controllers.py
