<?xml version="1.0"?>
<package format="3">
  <name>lunabot_bringup</name>
  <version>0.0.1</version>
  <description>Lunabot 2026 bringup package</description>
  <maintainer email="team@lunabotics.com">Lunabotics Team</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>slam_toolbox</depend>
  <depend>unitree_lidar_ros2</depend>
  <build_type>ament_python</build_type>
</package>
